--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -6,7 +6,6 @@
 <h2>(display/edit existing boards and add new boards)</h2>
 <!-- 
 add ability to re-sort? by: type, length, shaper, (fin setup?)
-make input fields allow autofill if existing board info matches typing?
  -->
 <table style="width:100%">
 <!-- saw examples using table id, and others using class. class is for css, right? -- what's id for? -->
@@ -32,10 +31,54 @@ make input fields allow autofill if existing board info matches typing?
     </tr>
 	{% endfor %}
 </table>
+<br>
+<br>
+<br>
 
+<form action="/addBoardToDB">
+    <!-- 
+    make input fields allow autofill if existing board info matches typing?
+ -->
+    <h3>Add a Board to your Quiver:</h3>
+    Board's nickname:<br>
+        <input type="text" name = "nickname" required>
+    <br>
+<!--
+    how to provide a set list to feed into dropdown?
+    cat_list == [longboard, shortboard, fish, gun, SUP, other]
+ -->    
+    <br>
+    Board Type:<br>
+        <select name = category required>
+        <option value="longboard">longboard</option>
+        <option value="shortboard">shortboard</option>
+        <option value="fish">fish</option>
+        <option value="gun">gun</option>
+        <option value="SUP">SUP</option>
+        <option value="other">other</option>
+        </select>
+    <!-- option to add category if "other"? -->
+    <br>
+    <!-- length: make input boxes smaller or convert to dropdowns? -->
+    Length:<br>
+        <input type="text" name = "length_ft">feet <input type="text" name = "length_in">inches
+    <br>
+    Shaper:<br>
+        <input type="text" name = "shaper">
+    <br>
+    Model or Description:<br>
+        <input type="text" name = "shape" required>
+    <br>
+    Fin Setup:<br>
+        <input type="text" name = "fins"> (eg: 2+1, singlefin, thruster)      
+    <br>
+    <br>
+    <input type="submit" value = "Add Board to your Quiver">
+</form>
 
 <h4>core info to include:</h4>
-<li>implement editability/ add board functionality</li>
+<li>&#10004; implement add board functionality</li>
+<li>implement ability to edit or delete existing boards</li>
 <li>&#10004;nickname</li>
 <li>&#10004;length (in x&#39; x&#34;)</li>
 <li>&#10004;brand/ shaper</li>
