--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,22 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<form class="form-signin" method="POST">
-<!--     <h2 class="form-signin-heading">Please Sign In</h2>
- -->
- 	<h2 class="form-signin-heading">This is Where you will Sign In, But it doesn't work yet</h2>
+<form action="{{url_for("login")}}" class="form-signin" method="POST">
+ 	<h2 class="form-signin-heading">Please Sign In</h2>
     <input type="email" name="email" class="form-control" placeholder="Email Address" required autofocus />
     <input type="password" name="password" class="form-control" placeholder="Password" required />
     <button type="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+</form>
+<!--     <button type="btn btn-lg btn-primary btn-block" href="/register" >Register</button>
+ -->
+
+<form action="{{url_for("register")}}" class="form-signin" method="POST">
+ 	<h2 class="form-signin-heading">Register to start using Ocean Journal</h2>
+    <input type="username" name="username" class="form-control" placeholder="pick a username" required autofocus />
+    <input type="email" name="email" class="form-control" placeholder="Email Address" required autofocus />
+    <input type="password" name="password" class="form-control" placeholder="Password" required />
+    <button type="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+    
 </form>
 
 {% endblock %}
