--- a/templates/surf_entry_add.html
+++ b/templates/surf_entry_add.html
@@ -83,7 +83,9 @@ Did you wish you'd brought a different board?:<br>
 <li>&#10004; location pulldown (pick from existing options, limited to CA for now)</li>
 <li>&#10004; board info (input field)</li>
 <li>&#10004; board preference (buttons)</li>
-<li>required fields?</li>
+<li>required fields?<br>
+(right now board is required because of how display template is working -- fix this
+to implement "did not go out" option)</li>
 <br>
 <br>
 <h4>Near-term stretch Goals: Additional features:</h4>
@@ -99,7 +101,8 @@ Did you wish you'd brought a different board?:<br>
 <li>overall enjoyment of session</li>
 <li>input: additional notes</li>
 <li>surfed vs/ just observed<br>
-	(and if not surfed, input field for: why not surfed)
+	(and if not surfed, input field for: why not surfed)<br>
+	(see above re: required fields issue)
 </li>
 <li>iconify the subjective stuff (board pref, crowds, challenge level, etc</li>
 <br>
