--- a/templates/about.html
+++ b/templates/about.html
@@ -7,10 +7,10 @@ about what info I want to collect and/or display)</h2>
 <h3>(it may become a home page for the user...
 	or maybe I need to add a separate page for that, with a graphical view of all their logged sessions on a map)</h3>
 <h2>TO DO:<br>
-display today's conditions</h2>
-<h2>in the meantime, have a tide chart!</h2>
-<h3>except, the chart I tried to steal from someone else's page is borked here. frown.</h3>
-<canvas class="chart_tide" data-location="san-francisco" data-duration="day" data-date="20150223" width="276" height="94"></canvas>
+display today's conditions<br>
+clean up the "about" info 
+</h2>
+
 
 
 <li></li>
