--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -35,7 +35,7 @@ add ability to re-sort? by: type, length, shaper, (fin setup?)
 <br>
 <br>
 
-<form action="/addBoardToDB">
+<form action="/addBoardToDB" method="post">
     <!-- 
     make input fields allow autofill if existing board info matches typing?
  -->
