--- a/templates/giantList_features.html
+++ b/templates/giantList_features.html
@@ -3,7 +3,7 @@
 {% block giantList %}
 <div id = "giantList">
 <h2>all the potential information for all logged surfs</h2>
-<h3>(this info should be moved to an about/ help page at some point)</h3>
+<h3>(this info should be rewritten as an about/ help page)</h3>
 <!-- <div id="entries-list">
  --><!-- see all_melons.html for scaffold on how to pull 
 and display info from the database
