all features working. stating cleanup and styling.

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,8 +2,7 @@
 {% block body %}
 
 <h2>TO DO:<br>
-display today's conditions<br>
-clean up the "about" info 
+clean up the giant list and turn this into an "about" page 
 </h2>
 
 
