--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -1,33 +1,29 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<h3>Display all of the previously logged journal entries:</h3>
+<h3>journal entries for {{username}}:</h3>
 
-<table style="width:100%">
-<!-- saw examples using table id, and others using class. class is for css, right? -- what's id for? -->
+<table class="table table-hover">
 	<tr>
-    	<th>Date: start time</th>
-    	<th>Which Beach</th>
-        <th>Which Spot?</th>
-        <th>Swell Direction</th>
-        <th>Swell Height/ Interval</th>
+    	<th>When?</th>
+    	<th>Where?</th>
+        <th>Swell</th>
         <th>Wind</th>
-
-
+        <th>Your Rating</th>
+        <th>MSW Rating</th>
   	</tr>
  
     {% for entry in entries %}
 	<tr>    
-    	<td>{{entry.date_time_start.strftime('%m/%d/%Y %I:%m %p')}}</td>
-    	<td>{{entry.loc.beach_name}}</td>
-        <td>{{entry.spot_name}}</td>
-        <td><div class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div> {{entry.swell1_dir_deg_global}} {{entry.swell1_dir_comp}}</td>
-        <td>{{entry.swell1_ht}} @ {{entry.swell1_per}} sec</td>
-        <td><div class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
+    	<td>{{entry.date_time_start.strftime('%m/%d/%Y')}}<br>{{entry.date_time_start.strftime('%I:%m %p')}}</td>
+    	<td>{{entry.loc.beach_name}}<br>{{entry.spot_name}}</td>
+        <td><div title="{{entry.swell1_dir_deg_global}} {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
+            {{entry.swell1_ht}} @ {{entry.swell1_per}} sec</td>
+        <td><div class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
+        <td>{{entry.rate_overall_fun}}</td>
+        <td></td>
         <td><a class="btn btn-primary" href="/entryDetails/{{entry.id}}">Details</a></td>
     </tr>
-
-
 	{% endfor %}
 </table>
 <br>
@@ -77,11 +73,5 @@ test msw swell arrow sprite:
 <br>
 <a href="http://magicseaweed.com"><img src="http://im-1-uk.msw.ms/msw_powered_by.png"></a>
 
-
 {% endblock %}
 
-
-<!-- this is an example from the ratings app that includes the option to link to a "details" page
- -->
-<!--     <li><a href="{{url_for("view_movie", id=rating.movie_id)}}">{{rating.movie.title}} &mdash; {{rating.rating}}</a></li>
- --> 
