--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,6 @@
+/* css style sheet for base.html and pages inheriting from base */
 
+/* navbar image scale and placement*/
 div.navbar-header img {
     width: 30px;
     float: left;
@@ -6,20 +8,25 @@ div.navbar-header img {
     margin-right: 7px;
 }
 
-li.warning {
-    color: red;
+div.navbar-text {
+  color: SteelBlue;
 }
 
-img.product-img {
+/*li.warning {
+    color: red;
+}*/
+
+/*img.product-img {
     display: inline-block;
     max-width: 400px;
-}
+}*/
 
 .form-signin {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
+/* not sure what "checkbox" is doing or if it's in use */
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
@@ -36,8 +43,12 @@ img.product-img {
   padding: 10px;
   font-size: 16px;
 }
+/* not sure what this is doing or if it's in use */
 .form-signin .form-control:focus {
   z-index: 2;
+}
+.form-signin input[type="username"] {
+  margin-bottom: 10px;
 }
 .form-signin input[type="email"] {
   margin-bottom: -1px;
